# Calender

./: BACKGROUND_EFFECTS.md  CMakeLists.txt  CalendarIntegration.pro  IMPLEMENTATION.md  MENU_GUIDE.md  NEW_FEATURES.md  OAUTH_TROUBLESHOOTING.md  PROJECT_SUMMARY.txt  QUICK_FIX.md  README.md  TESTING.md  UI_IMPROVEMENTS.md  UI_PREVIEW.md
resources/: qml.qrc
src/: main.cpp
src/adapters/: AppleCalendarAdapter.cpp  AppleCalendarAdapter.h  CalDAVClient.cpp  CalDAVClient.h  CalendarAdapter.h  GoogleCalendarAdapter.cpp  GoogleCalendarAdapter.h  OutlookCalendarAdapter.cpp  OutlookCalendarAdapter.h
src/core/: CalendarEvent.h  CalendarManager.cpp  CalendarManager.h  Platform.h  SearchCriteria.h  Task.h
src/search/: SearchEngine.cpp  SearchEngine.h
src/storage/: DatabaseManager.cpp  DatabaseManager.h
src/sync/: SyncManager.cpp  SyncManager.h
src/ui/: MainWindow.cpp  MainWindow.h  mainwindow.ui
src/ui/qml/: CalendarSidebar.qml  CalendarView.qml  EventDetailPanel.qml  EventList.qml  SearchBar.qml  main.qml
tests/: CMakeLists.txt  test_adapters.cpp  test_search.cpp
